--- a/websiteweek3.html
+++ b/websiteweek3.html
@@ -13,7 +13,7 @@
             <h1 style="text-decoration: underline; text-align: center;">Welcome to my World of CSS</h1>
         </header>
         <main>
-            <img src="images/owl2.jpg" alt="owl" height="400"   width="300" class="owl-image">
+            <img src="https://www.pexels.com/photo/grey-owl-2273875/" alt="owl" height="400"   width="300" class="owl-image">
             <div class="card-container">
                 <div class="card">Week 1 - Complete</div>
                 <div class="card">Week 2 - Complete</div>
